--- a/week-4/gps/gps2-1.html
+++ b/week-4/gps/gps2-1.html
@@ -276,6 +276,12 @@ We spent [#] hours on this challenge.
     <footer>
       This information is copied directly from <a href="https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf">GitHub's Training Cheatsheet</a>.
     </footer>
-  <!-- Add your reflection here as a comment. -->
+  <!-- I had a good time in the GPS with guide Matt and pair Lindsey.
+
+  I do feel more confident in CSS than I was before I began. In particular I feel like I understand how to use float and clear a bit better.
+
+  In general I think CSS is the thing I need to work the most on right now. I've got a ways to go!
+
+   -->
   </body>
 </html>
