Add reflections to 9.3.1

--- a/week-9/dom-manipulation/home-page.html
+++ b/week-9/dom-manipulation/home-page.html
@@ -28,5 +28,20 @@
 </body>
 </html>
 
-<!-- Add your reflection here -->
-<!-- # This challenge took me [#] hours. -->
+<!-- Add your reflection here
+What did you learn about the DOM?
+
+I knew nothing about the DOM really, before now. This
+was a nice introduction. I learned how to conceptualize
+it, as well as how to start manipulate it.
+
+What are some useful methods to use to manipulate the DOM?
+
+Accessing items by their id, class, or tag is very
+useful. After that I can edit text, or CSS elements.
+
+
+
+
+-->
+<!-- # This challenge took me .75 hours. -->
